--- a/react11_blogSite/package.json
+++ b/react11_blogSite/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "postinstall": "node ./postinstall.js",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -13,12 +14,14 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@tinymce/tinymce-react": "^4.3.2",
     "appwrite": "^13.0.2",
+    "fs-extra": "^11.2.0",
     "html-react-parser": "^5.1.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.2"
+    "react-router-dom": "^6.22.2",
+    "tinymce": "^7.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
